--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ravula Vishnu Vardhan Reddy - Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="icon" href="./IMG_20230315_120448.jpg">
 </head>
 <body>
     <header class="hero">
