--- a/index.html
+++ b/index.html
@@ -134,5 +134,18 @@
             <p class="copyright">© 2025 Ravula Vishnu Vardhan Reddy. All rights reserved.</p>
         </div>
     </footer>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/67ee173dfcbadb190e9ecb47/1int0libe';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
