--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="exp-block">
             <h3>Frontend Developer Intern</h3>
             <p><b>NeedZera</b> | Hyderabad, Telangana</p>
-            <span class="period">Jan 2025 – Present</span>
+            <span class="period">Feb 2025 – Aug 2025</span>
             <ul>
                 <li>Collaborating with the development team to build and enhance user interfaces using HTML, CSS,
                     JavaScript, and ReactJS.</li>
@@ -179,3 +179,4 @@
 </body>
 
 </html>
+
