--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2 class="hero-title">Ravula Vishnu Vardhan Reddy</h2>
             <div id="dynamic-role"></div>
             <div class="hero-links">
-                <a href="./Vishnu_Resume.pdf" target="_blank" class="hero-btn">Resume</a>
+                <a href="./Vishnu_Vardhan_Reddy_Full_Stack_Developer_Fresher.pdf" target="_blank" class="hero-btn">Resume</a>
                 <a href="https://github.com/RavulaVishnuVardhan" target="_blank" class="hero-btn">GitHub</a>
                 <a href="https://www.linkedin.com/in/ravulavishnuvardhanreddy/" target="_blank"
                     class="hero-btn">LinkedIn</a>
@@ -172,11 +172,12 @@
         <div class="footer-links">
             <a href="https://github.com/RavulaVishnuVardhan" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/ravulavishnuvardhanreddy/" target="_blank">LinkedIn</a>
-            <a href="./Vishnu_Resume.pdf" target="_blank">Resume</a>
+            <a href="./Vishnu_Vardhan_Reddy_Full_Stack_Developer_Fresher.pdf" target="_blank">Resume</a>
         </div>
     </footer>
     <script src="script.js"></script>
 </body>
 
 </html>
+
 
